# przeczytai.me

./: .env.local.example  .gitignore  AGENTS.md  README.md  vercel.json
.github/: CODEOWNERS
.github/scripts/: linear-summary.js  linear-weekly-summary.js
.github/workflows/: discord-notify.yml  discord-review-notify.yml  linear-summary.yml  linear-weekly-summary.yml
backend/: Dockerfile.processor  development_plan.md  pyproject.toml
backend/app/: auth.py  config.py  errors.py  main.py  models.py  processing.py  storage.py  tts.py
backend/app/repositories/: readings.py  textcordings.py
backend/app/routes/: health.py  readings.py  textcordings.py
backend/app/services/: readings.py
backend/scripts/: build-push-processor-image.sh
backend/tests/: test_api.py  test_open_ai.py  test_processing.py
docs/: adding-a-tts-vendor.md  auth.md  frontend-clerk-api-integration.md  linear-discord-setup.md  przeczytajmi-screen-architecture.md
frontend/: .env.local.example  AGENTS.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: proxy.ts
infrastructure/: .gitignore  README.md
learnings/python/: empty-exception-classes.md  pytest-conftest-fixtures.md
scripts/: build-push-processor-image.sh
src/app/: layout.tsx  page.tsx
src/components/: providers.tsx
tests/api_gateway/: .env.example  conftest.py  helpers.py  test_auth.py  test_corrected_text.py  test_create_reading.py  test_delete_reading.py  test_docs.py  test_get_reading.py  test_health.py  test_list_readings.py  test_openai_tts.py  test_openapi.py  test_recording.py  (+1 more)
(+62 files in other folders)
