[project]
name = "przeczytai-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.40",
  "edge-tts>=7.2.8,<8",
  "fastapi>=0.120",
  "mangum>=0.19",
  "openai>=2.0,<3",
  "pydantic-settings>=2.8",
  "ulid-py>=1.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "ruff>=0.8",
  "uvicorn[standard]>=0.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
